# tm1-file-tools

./: .flake8  .pre-commit-config.yaml  LICENSE  PACKAGING.md  PACKAGING.rst  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: black.yaml  isort.yaml  out-of-the-box.yaml  run_black.yml  run_flake8.yml  run_isort.yml  run_tests.yaml  tests.yaml
docs/: Makefile  requirements.txt
docs/source/: conf.py  history.rst  index.rst  indexes.rst  quickstart.rst  requirements.txt
src/tm1filetools/: __init__.py
src/tm1filetools/files/: __init__.py  base.py
src/tm1filetools/tools/: __init__.py  base.py  cfgfiletool.py  cubetool.py  dimtool.py  filetool.py  logfiletool.py  processtool.py  rulestool.py
tests/: conftest.py  test_general.py  test_orphans.py
tests/samples/: SAMPLES_README.rst
tests/samples/json_out/: test.tm1filetools.single_element_static_subset.json
tests/test_files/: conftest.py  test_base.py  test_binary.py  test_cfg.py  test_cube.py  test_dimension.py  test_rules.py  test_subset.py  test_text.py  test_text_file.py  test_view.py
tests/test_files/test_binary/: test_binary.py  test_cube.py  test_dimension.py  test_feeders.py
tests/test_files/test_text/: test_cfg.py  test_chore.py  test_cma.py  test_linecode.py  test_log.py  test_other.py  test_process.py  test_rules.py  test_subset.py  test_text.py  test_view.py
tests/test_tools/: test_attr_getters.py  test_cfgtool.py  test_config.py  test_core.py  test_cubetool.py  test_delete.py  test_dimtool.py  test_filetool.py  test_finders.py  test_general.py  test_getters.py  test_logfiletool.py  test_orphans.py  test_processtool.py  test_rename.py  test_rulestool.py
tm1filetools/: general.py  helpers.py  orphans.py
tm1filetools/files/: __init__.py  attribute_dimension.py  base.py  binary.py  cfg.py  cube.py  dimension.py  general.py  orphans.py  rules.py  subset.py  text.py  tm1_file_object.py  view.py
tm1filetools/files/binary/: attribute_cube.py  binary.py  cube.py  dimension.py  feeders.py
tm1filetools/files/text/: cfg.py  cma.py  log.py  process.py  text.py  user_owned.py  (+1 more)
tm1filetools/tools/: __init__.py  filetool.py
(+46 files in other folders)
