[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "tm1filetools"
version = "0.3.1"
authors = [
  { name="Alexander Sutcliffe", email="sutcliffe.alex@gmail.com" },
]
description = "A package for working with files created by a TM1 database"
dependencies = [
    "chardet>=5.0.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/scrambldchannel/tm1-file-tools"
"Bug Tracker" = "https://github.com/scrambldchannel/tm1-file-tools"


[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | _build
    | buck-out
    | build
    | dist
  )
)
'''

[tool.isort]
profile = "black"
